src/parser.output
Terminals unused in grammar

   DEC
   DEQ
   IEQ
   INC
   PARAMETERS
   LEB
   REB
   UNEXPECTED_CHARACTER


Grammar

    0 $accept: start "end of file"

    1 start: START_PROGRAM program

    2 $@1: %empty

    3 start: START_PRODUCT $@1 product

    4 $@2: %empty

    5 program: imports_opt input_opt types_opt signature algebras_opt grammars $@2 instances_opt

    6 imports_opt: imports
    7            | %empty

    8 imports: import
    9        | imports import

   10 import: IMPORT module_ident
   11       | IMPORT '"' STRING '"'

   12 module_ident: STRING

   13 input_opt: INPUT input_specifier
   14          | INPUT '<' inputs '>'
   15          | %empty

   16 inputs: input
   17       | inputs ',' input

   18 input: input_specifier

   19 input_specifier: STRING

   20 types_opt: types
   21          | %empty

   22 types: type
   23      | types type

   24 type: TYPE ident '=' datatype
   25     | TYPE ident '=' EXTERN

   26 datatype: type_specifier
   27         | "alphabet keyword"
   28         | VOID
   29         | '[' type_specifier ']'
   30         | '(' named_datatypes ')'

   31 type_specifier: STRING

   32 named_datatypes: named_datatype
   33                | named_datatypes ',' named_datatype

   34 named_datatype: datatype name_ident

   35 name_ident: STRING

   36 @3: %empty

   37 signature: SIGNATURE ident '(' sig_args ')' @3 '{' sig_decls '}'

   38 sig_args: "alphabet keyword" ',' args signtparas

   39 args: arg
   40     | args ',' arg

   41 arg: ident

   42 signtparas: ';' datatypes
   43           | %empty

   44 sig_decls: decl ';'
   45          | sig_decls decl ';'

   46 decl: qual_datatype ident '(' multi_datatypes signtparas ')'

   47 qual_datatype: datatype
   48              | CHOICE datatype

   49 datatypes: datatype
   50          | datatypes ',' datatype

   51 multi_datatype: '<' datatypes '>'
   52               | datatype

   53 multi_datatypes: multi_datatype
   54                | multi_datatypes ',' multi_datatype

   55 algebras_opt: algebras
   56             | %empty

   57 algebras: algebra
   58         | algebras algebra

   59 algebra: algebra_head '{' fn_defs '}'
   60        | ALGEBRA ident AUTOMATIC automatic_specifier ';'

   61 automatic_specifier: STRING

   62 mode: MODE

   63 algebra_head: mode ALGEBRA ident parameters IMPLEMENTS signature_ident '(' eqs ')'
   64             | ALGEBRA ident parameters IMPLEMENTS signature_ident '(' eqs ')'
   65             | ALGEBRA ident parameters EXTENDS algebra_ident

   66 parameters: parameter_block
   67           | %empty

   68 parameter_block: '(' var_decl_init_p
   69                | '(' var_decl_inits var_decl_init_p

   70 var_decl_inits: var_decl_init_k
   71               | var_decl_inits var_decl_init_k

   72 var_decl_init_p: datatype ident '=' expr ')'

   73 var_decl_init_k: datatype ident '=' expr ','

   74 var_decl_init: datatype ident '=' expr ';'

   75 var_decl: datatype ident ';'
   76         | var_decl_init

   77 algebra_ident: STRING
   78              | MODE

   79 ident: STRING
   80      | MODE

   81 eqs: eq
   82    | eqs ',' eq

   83 eq: sig_var '=' datatype

   84 sig_var: sort_ident
   85        | "alphabet keyword"

   86 sort_ident: STRING

   87 fn_defs: %empty
   88        | fn_defs fn_def

   89 fn_def: mode_opt qual_datatype ident '(' para_decls fnntparas ')' '{' statements '}'

   90 fnntparas: ';' para_decls
   91          | %empty

   92 mode_opt: mode
   93         | %empty

   94 para_decls: %empty
   95           | para_decl
   96           | para_decls ',' para_decl

   97 para_decl: datatype ident
   98          | '<' para_decls '>'
   99          | VOID

  100 statements: statement
  101           | statements statement

  102 statement: continue
  103          | break
  104          | return
  105          | if
  106          | for
  107          | while
  108          | assign
  109          | var_decl
  110          | fn_call
  111          | '{' statements '}'

  112 continue: CONTINUE ';'

  113 break: BREAK ';'

  114 fn_call: ident '(' exprs ')' ';'

  115 return: RETURN expr ';'

  116 if: IF '(' expr ')' statement
  117   | IF '(' expr ')' statement ELSE statement

  118 for: FOR '(' var_decl_init expr ';' inc_stmt ')' statement

  119 while: WHILE '(' expr ')' statement

  120 assign: var_access '=' expr ';'

  121 inc_stmt: var_access '=' expr

  122 var_access: ident
  123           | var_access '.' name_ident
  124           | var_access '[' expr ']'

  125 expr: expr '<' expr
  126     | expr '>' expr
  127     | expr LT expr
  128     | expr GT expr
  129     | expr EQ expr
  130     | expr NEQ expr
  131     | expr AND expr
  132     | expr OR expr
  133     | '(' expr ')'
  134     | NOT expr
  135     | expr '+' expr
  136     | expr '-' expr
  137     | expr '*' expr
  138     | expr '/' expr
  139     | STRING '(' exprs_empty ')'
  140     | var_access
  141     | const

  142 number: NUMBER
  143       | NUMBER '.' NUMBER
  144       | FLOAT
  145       | NUMBER '$' NUMBER
  146       | '-' number

  147 exprs: expr
  148      | exprs ',' expr

  149 exprs_empty: exprs
  150            | %empty

  151 grammars: grammar
  152         | grammars grammar

  153 grammar: GRAMMAR ident USES signature_ident '(' AXIOM '=' nt_ident ')' '{' grammar_body '}'

  154 grammar_body: tabulated productions
  155             | productions

  156 tabulated: TABULATED '{' args '}'

  157 signature_ident: STRING

  158 nt_ident: STRING

  159 productions: production
  160            | productions production

  161 production: ident ntargs '=' rhs ';'

  162 ntargs: '(' para_decls ')'
  163       | %empty

  164 rhs: alts
  165    | alts '#' choice_fn_ident

  166 choice_fn_ident: STRING

  167 ntparas: ';' exprs
  168        | %empty

  169 filters: filters ',' filter_fn
  170        | filter_fn

  171 tracks: track
  172       | tracks ',' track

  173 track: alt

  174 alts: alt
  175     | alts '|' alt

  176 alt: '{' alts '}'
  177    | sig_fn_or_term_ident '(' rhs_args ntparas ')'
  178    | symbol_ident
  179    | alt filter_kw filter_fn
  180    | '<' tracks '>'
  181    | alt filter_kw '<' filters '>'
  182    | alt '.' '(' exprs ')' '.'
  183    | symbol_ident '[' exprs ']'
  184    | alt '.' '{' alt '}' '.'
  185    | '.' '[' statements ']' '.' '{' alt '}'

  186 sig_fn_or_term_ident: STRING

  187 symbol_ident: STRING

  188 filter_kw: WITH
  189          | SUCHTHAT
  190          | WITH_OVERLAY
  191          | SUCHTHAT_OVERLAY

  192 filter_fn: ident
  193          | ident '(' exprs ')'

  194 rhs_args: rhs_arg
  195         | rhs_args ',' rhs_arg

  196 rhs_arg: alt
  197        | const

  198 const: number
  199      | '\'' character_constant '\''
  200      | '"' string_constant '"'

  201 string_constant: STRING
  202                | %empty

  203 character_constant: STRING

  204 instances_opt: instances
  205              | %empty

  206 instances: instances_

  207 instances_: instance
  208           | instances_ instance

  209 $@4: %empty

  210 instance: INSTANCE i_lhs '=' ident $@4 '(' product ')' ';'

  211 i_lhs: ident
  212      | ident '(' args ')'

  213 product: product '*' product
  214        | product '/' product
  215        | product '%' product
  216        | product '^' product
  217        | product '.' product
  218        | product '|' product
  219        | product '{' defaults '}'
  220        | '(' product ')'
  221        | algebra_ident
  222        | product SUCHTHAT filter_fn

  223 defaults: default
  224         | defaults ',' default

  225 default: var_access '=' expr


Terminals, with rules where they appear

"end of file" (0) 0
'"' (34) 11 200
'#' (35) 165
'$' (36) 145
'%' (37) 215
'\'' (39) 199
'(' (40) 30 37 46 63 64 68 69 89 114 116 117 118 119 133 139 153 162
    177 182 193 210 212 220
')' (41) 30 37 46 63 64 72 89 114 116 117 118 119 133 139 153 162 177
    182 193 210 212 220
'*' (42) 137 213
'+' (43) 135
',' (44) 17 33 38 40 50 54 73 82 96 148 169 172 195 224
'-' (45) 136 146
'.' (46) 123 143 182 184 185 217
'/' (47) 138 214
';' (59) 42 44 45 60 74 75 90 112 113 114 115 118 120 161 167 210
'<' (60) 14 51 98 125 180 181
'=' (61) 24 25 72 73 74 83 120 121 153 161 210 225
'>' (62) 14 51 98 126 180 181
'[' (91) 29 124 183 185
']' (93) 29 124 183 185
'^' (94) 216
'{' (123) 37 59 89 111 153 156 176 184 185 219
'|' (124) 175 218
'}' (125) 37 59 89 111 153 156 176 184 185 219
error (256)
START_PROGRAM (258) 1
START_PRODUCT (259) 3
ALGEBRA (260) 60 63 64 65
MODE (261) 62 78 80
"alphabet keyword" (262) 27 38 85
AND (263) 131
AXIOM (264) 153
CHOICE (265) 48
DEC (266)
DEQ (267)
ELSE (268) 117
EXTENDS (269) 65
EQ (270) 129
FOR (271) 118
WHILE (272) 119
GRAMMAR (273) 153
GT (274) 128
STRING (275) 11 12 19 31 35 61 77 79 86 139 157 158 166 186 187 201
    203
IEQ (276)
IF (277) 116 117
IMPLEMENTS (278) 63 64
IMPORT (279) 10 11
INPUT (280) 13 14
INC (281)
INSTANCE (282) 210
LT (283) 127
NEQ (284) 130
NOT (285) 134
NUMBER (286) 142 143 145
FLOAT (287) 144
OR (288) 132
PARAMETERS (289)
RETURN (290) 115
CONTINUE (291) 112
BREAK (292) 113
SIGNATURE (293) 37
TABULATED (294) 156
TYPE (295) 24 25
EXTERN (296) 25
USES (297) 153
VOID (298) 28 99
WITH (299) 188
SUCHTHAT (300) 189 222
WITH_OVERLAY (301) 190
SUCHTHAT_OVERLAY (302) 191
AUTOMATIC (303) 60
LEB (304)
REB (305)
UNEXPECTED_CHARACTER (306)
LOWER_THAN_ELSE (307)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
start (77)
    on left: 1 3, on right: 0
$@1 (78)
    on left: 2, on right: 3
program (79)
    on left: 5, on right: 1
$@2 (80)
    on left: 4, on right: 5
imports_opt (81)
    on left: 6 7, on right: 5
imports (82)
    on left: 8 9, on right: 6 9
import (83)
    on left: 10 11, on right: 8 9
module_ident (84)
    on left: 12, on right: 10
input_opt (85)
    on left: 13 14 15, on right: 5
inputs (86)
    on left: 16 17, on right: 14 17
input (87)
    on left: 18, on right: 16 17
input_specifier (88)
    on left: 19, on right: 13 18
types_opt (89)
    on left: 20 21, on right: 5
types (90)
    on left: 22 23, on right: 20 23
type (91)
    on left: 24 25, on right: 22 23
datatype (92)
    on left: 26 27 28 29 30, on right: 24 34 47 48 49 50 52 72 73 74
    75 83 97
type_specifier (93)
    on left: 31, on right: 26 29
named_datatypes (94)
    on left: 32 33, on right: 30 33
named_datatype (95)
    on left: 34, on right: 32 33
name_ident (96)
    on left: 35, on right: 34 123
signature (97)
    on left: 37, on right: 5
@3 (98)
    on left: 36, on right: 37
sig_args (99)
    on left: 38, on right: 37
args (100)
    on left: 39 40, on right: 38 40 156 212
arg (101)
    on left: 41, on right: 39 40
signtparas (102)
    on left: 42 43, on right: 38 46
sig_decls (103)
    on left: 44 45, on right: 37 45
decl (104)
    on left: 46, on right: 44 45
qual_datatype (105)
    on left: 47 48, on right: 46 89
datatypes (106)
    on left: 49 50, on right: 42 50 51
multi_datatype (107)
    on left: 51 52, on right: 53 54
multi_datatypes (108)
    on left: 53 54, on right: 46 54
algebras_opt (109)
    on left: 55 56, on right: 5
algebras (110)
    on left: 57 58, on right: 55 58
algebra (111)
    on left: 59 60, on right: 57 58
automatic_specifier (112)
    on left: 61, on right: 60
mode (113)
    on left: 62, on right: 63 92
algebra_head (114)
    on left: 63 64 65, on right: 59
parameters (115)
    on left: 66 67, on right: 63 64 65
parameter_block (116)
    on left: 68 69, on right: 66
var_decl_inits (117)
    on left: 70 71, on right: 69 71
var_decl_init_p (118)
    on left: 72, on right: 68 69
var_decl_init_k (119)
    on left: 73, on right: 70 71
var_decl_init (120)
    on left: 74, on right: 76 118
var_decl (121)
    on left: 75 76, on right: 109
algebra_ident (122)
    on left: 77 78, on right: 65 221
ident (123)
    on left: 79 80, on right: 24 25 37 41 46 60 63 64 65 72 73 74 75
    89 97 114 122 153 161 192 193 210 211 212
eqs (124)
    on left: 81 82, on right: 63 64 82
eq (125)
    on left: 83, on right: 81 82
sig_var (126)
    on left: 84 85, on right: 83
sort_ident (127)
    on left: 86, on right: 84
fn_defs (128)
    on left: 87 88, on right: 59 88
fn_def (129)
    on left: 89, on right: 88
fnntparas (130)
    on left: 90 91, on right: 89
mode_opt (131)
    on left: 92 93, on right: 89
para_decls (132)
    on left: 94 95 96, on right: 89 90 96 98 162
para_decl (133)
    on left: 97 98 99, on right: 95 96
statements (134)
    on left: 100 101, on right: 89 101 111 185
statement (135)
    on left: 102 103 104 105 106 107 108 109 110 111, on right: 100
    101 116 117 118 119
continue (136)
    on left: 112, on right: 102
break (137)
    on left: 113, on right: 103
fn_call (138)
    on left: 114, on right: 110
return (139)
    on left: 115, on right: 104
if (140)
    on left: 116 117, on right: 105
for (141)
    on left: 118, on right: 106
while (142)
    on left: 119, on right: 107
assign (143)
    on left: 120, on right: 108
inc_stmt (144)
    on left: 121, on right: 118
var_access (145)
    on left: 122 123 124, on right: 120 121 123 124 140 225
expr (146)
    on left: 125 126 127 128 129 130 131 132 133 134 135 136 137 138
    139 140 141, on right: 72 73 74 115 116 117 118 119 120 121 124
    125 126 127 128 129 130 131 132 133 134 135 136 137 138 147 148
    225
number (147)
    on left: 142 143 144 145 146, on right: 146 198
exprs (148)
    on left: 147 148, on right: 114 148 149 167 182 183 193
exprs_empty (149)
    on left: 149 150, on right: 139
grammars (150)
    on left: 151 152, on right: 5 152
grammar (151)
    on left: 153, on right: 151 152
grammar_body (152)
    on left: 154 155, on right: 153
tabulated (153)
    on left: 156, on right: 154
signature_ident (154)
    on left: 157, on right: 63 64 153
nt_ident (155)
    on left: 158, on right: 153
productions (156)
    on left: 159 160, on right: 154 155 160
production (157)
    on left: 161, on right: 159 160
ntargs (158)
    on left: 162 163, on right: 161
rhs (159)
    on left: 164 165, on right: 161
choice_fn_ident (160)
    on left: 166, on right: 165
ntparas (161)
    on left: 167 168, on right: 177
filters (162)
    on left: 169 170, on right: 169 181
tracks (163)
    on left: 171 172, on right: 172 180
track (164)
    on left: 173, on right: 171 172
alts (165)
    on left: 174 175, on right: 164 165 175 176
alt (166)
    on left: 176 177 178 179 180 181 182 183 184 185, on right: 173
    174 175 179 181 182 184 185 196
sig_fn_or_term_ident (167)
    on left: 186, on right: 177
symbol_ident (168)
    on left: 187, on right: 178 183
filter_kw (169)
    on left: 188 189 190 191, on right: 179 181
filter_fn (170)
    on left: 192 193, on right: 169 170 179 222
rhs_args (171)
    on left: 194 195, on right: 177 195
rhs_arg (172)
    on left: 196 197, on right: 194 195
const (173)
    on left: 198 199 200, on right: 141 197
string_constant (174)
    on left: 201 202, on right: 200
character_constant (175)
    on left: 203, on right: 199
instances_opt (176)
    on left: 204 205, on right: 5
instances (177)
    on left: 206, on right: 204
instances_ (178)
    on left: 207 208, on right: 206 208
instance (179)
    on left: 210, on right: 207 208
$@4 (180)
    on left: 209, on right: 210
i_lhs (181)
    on left: 211 212, on right: 210
product (182)
    on left: 213 214 215 216 217 218 219 220 221 222, on right: 3 210
    213 214 215 216 217 218 219 220 222
defaults (183)
    on left: 223 224, on right: 219 224
default (184)
    on left: 225, on right: 223 224


State 0

    0 $accept: . start "end of file"

    START_PROGRAM  shift, and go to state 1
    START_PRODUCT  shift, and go to state 2

    start  go to state 3


State 1

    1 start: START_PROGRAM . program

    IMPORT  shift, and go to state 4

    $default  reduce using rule 7 (imports_opt)

    program      go to state 5
    imports_opt  go to state 6
    imports      go to state 7
    import       go to state 8


State 2

    3 start: START_PRODUCT . $@1 product

    $default  reduce using rule 2 ($@1)

    $@1  go to state 9


State 3

    0 $accept: start . "end of file"

    "end of file"  shift, and go to state 10


State 4

   10 import: IMPORT . module_ident
   11       | IMPORT . '"' STRING '"'

    STRING  shift, and go to state 11
    '"'     shift, and go to state 12

    module_ident  go to state 13


State 5

    1 start: START_PROGRAM program .

    $default  reduce using rule 1 (start)


State 6

    5 program: imports_opt . input_opt types_opt signature algebras_opt grammars $@2 instances_opt

    INPUT  shift, and go to state 14

    $default  reduce using rule 15 (input_opt)

    input_opt  go to state 15


State 7

    6 imports_opt: imports .
    9 imports: imports . import

    IMPORT  shift, and go to state 4

    $default  reduce using rule 6 (imports_opt)

    import  go to state 16


State 8

    8 imports: import .

    $default  reduce using rule 8 (imports)


State 9

    3 start: START_PRODUCT $@1 . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 21


State 10

    0 $accept: start "end of file" .

    $default  accept


State 11

   12 module_ident: STRING .

    $default  reduce using rule 12 (module_ident)


State 12

   11 import: IMPORT '"' . STRING '"'

    STRING  shift, and go to state 22


State 13

   10 import: IMPORT module_ident .

    $default  reduce using rule 10 (import)


State 14

   13 input_opt: INPUT . input_specifier
   14          | INPUT . '<' inputs '>'

    STRING  shift, and go to state 23
    '<'     shift, and go to state 24

    input_specifier  go to state 25


State 15

    5 program: imports_opt input_opt . types_opt signature algebras_opt grammars $@2 instances_opt

    TYPE  shift, and go to state 26

    $default  reduce using rule 21 (types_opt)

    types_opt  go to state 27
    types      go to state 28
    type       go to state 29


State 16

    9 imports: imports import .

    $default  reduce using rule 9 (imports)


State 17

   78 algebra_ident: MODE .

    $default  reduce using rule 78 (algebra_ident)


State 18

   77 algebra_ident: STRING .

    $default  reduce using rule 77 (algebra_ident)


State 19

  220 product: '(' . product ')'

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 30


State 20

  221 product: algebra_ident .

    $default  reduce using rule 221 (product)


State 21

    3 start: START_PRODUCT $@1 product .
  213 product: product . '*' product
  214        | product . '/' product
  215        | product . '%' product
  216        | product . '^' product
  217        | product . '.' product
  218        | product . '|' product
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '*'       shift, and go to state 32
    '/'       shift, and go to state 33
    '|'       shift, and go to state 34
    '%'       shift, and go to state 35
    '.'       shift, and go to state 36
    '^'       shift, and go to state 37
    '{'       shift, and go to state 38

    $default  reduce using rule 3 (start)


State 22

   11 import: IMPORT '"' STRING . '"'

    '"'  shift, and go to state 39


State 23

   19 input_specifier: STRING .

    $default  reduce using rule 19 (input_specifier)


State 24

   14 input_opt: INPUT '<' . inputs '>'

    STRING  shift, and go to state 23

    inputs           go to state 40
    input            go to state 41
    input_specifier  go to state 42


State 25

   13 input_opt: INPUT input_specifier .

    $default  reduce using rule 13 (input_opt)


State 26

   24 type: TYPE . ident '=' datatype
   25     | TYPE . ident '=' EXTERN

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident  go to state 45


State 27

    5 program: imports_opt input_opt types_opt . signature algebras_opt grammars $@2 instances_opt

    SIGNATURE  shift, and go to state 46

    signature  go to state 47


State 28

   20 types_opt: types .
   23 types: types . type

    TYPE  shift, and go to state 26

    $default  reduce using rule 20 (types_opt)

    type  go to state 48


State 29

   22 types: type .

    $default  reduce using rule 22 (types)


State 30

  213 product: product . '*' product
  214        | product . '/' product
  215        | product . '%' product
  216        | product . '^' product
  217        | product . '.' product
  218        | product . '|' product
  219        | product . '{' defaults '}'
  220        | '(' product . ')'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '*'       shift, and go to state 32
    '/'       shift, and go to state 33
    '|'       shift, and go to state 34
    '%'       shift, and go to state 35
    '.'       shift, and go to state 36
    '^'       shift, and go to state 37
    '{'       shift, and go to state 38
    ')'       shift, and go to state 49


State 31

  222 product: product SUCHTHAT . filter_fn

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident      go to state 50
    filter_fn  go to state 51


State 32

  213 product: product '*' . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 52


State 33

  214 product: product '/' . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 53


State 34

  218 product: product '|' . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 54


State 35

  215 product: product '%' . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 55


State 36

  217 product: product '.' . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 56


State 37

  216 product: product '^' . product

    MODE    shift, and go to state 17
    STRING  shift, and go to state 18
    '('     shift, and go to state 19

    algebra_ident  go to state 20
    product        go to state 57


State 38

  219 product: product '{' . defaults '}'

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident       go to state 58
    var_access  go to state 59
    defaults    go to state 60
    default     go to state 61


State 39

   11 import: IMPORT '"' STRING '"' .

    $default  reduce using rule 11 (import)


State 40

   14 input_opt: INPUT '<' inputs . '>'
   17 inputs: inputs . ',' input

    '>'  shift, and go to state 62
    ','  shift, and go to state 63


State 41

   16 inputs: input .

    $default  reduce using rule 16 (inputs)


State 42

   18 input: input_specifier .

    $default  reduce using rule 18 (input)


State 43

   80 ident: MODE .

    $default  reduce using rule 80 (ident)


State 44

   79 ident: STRING .

    $default  reduce using rule 79 (ident)


State 45

   24 type: TYPE ident . '=' datatype
   25     | TYPE ident . '=' EXTERN

    '='  shift, and go to state 64


State 46

   37 signature: SIGNATURE . ident '(' sig_args ')' @3 '{' sig_decls '}'

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident  go to state 65


State 47

    5 program: imports_opt input_opt types_opt signature . algebras_opt grammars $@2 instances_opt

    ALGEBRA  shift, and go to state 66
    MODE     shift, and go to state 67

    $default  reduce using rule 56 (algebras_opt)

    algebras_opt  go to state 68
    algebras      go to state 69
    algebra       go to state 70
    mode          go to state 71
    algebra_head  go to state 72


State 48

   23 types: types type .

    $default  reduce using rule 23 (types)


State 49

  220 product: '(' product ')' .

    $default  reduce using rule 220 (product)


State 50

  192 filter_fn: ident .
  193          | ident . '(' exprs ')'

    '('  shift, and go to state 73

    $default  reduce using rule 192 (filter_fn)


State 51

  222 product: product SUCHTHAT filter_fn .

    $default  reduce using rule 222 (product)


State 52

  213 product: product . '*' product
  213        | product '*' product .
  214        | product . '/' product
  215        | product . '%' product
  216        | product . '^' product
  217        | product . '.' product
  218        | product . '|' product
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '{'       shift, and go to state 38

    $default  reduce using rule 213 (product)


State 53

  213 product: product . '*' product
  214        | product . '/' product
  214        | product '/' product .
  215        | product . '%' product
  216        | product . '^' product
  217        | product . '.' product
  218        | product . '|' product
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '{'       shift, and go to state 38

    $default  reduce using rule 214 (product)


State 54

  213 product: product . '*' product
  214        | product . '/' product
  215        | product . '%' product
  216        | product . '^' product
  217        | product . '.' product
  218        | product . '|' product
  218        | product '|' product .
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '{'       shift, and go to state 38

    $default  reduce using rule 218 (product)


State 55

  213 product: product . '*' product
  214        | product . '/' product
  215        | product . '%' product
  215        | product '%' product .
  216        | product . '^' product
  217        | product . '.' product
  218        | product . '|' product
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '{'       shift, and go to state 38

    $default  reduce using rule 215 (product)


State 56

  213 product: product . '*' product
  214        | product . '/' product
  215        | product . '%' product
  216        | product . '^' product
  217        | product . '.' product
  217        | product '.' product .
  218        | product . '|' product
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '{'       shift, and go to state 38

    $default  reduce using rule 217 (product)


State 57

  213 product: product . '*' product
  214        | product . '/' product
  215        | product . '%' product
  216        | product . '^' product
  216        | product '^' product .
  217        | product . '.' product
  218        | product . '|' product
  219        | product . '{' defaults '}'
  222        | product . SUCHTHAT filter_fn

    SUCHTHAT  shift, and go to state 31
    '{'       shift, and go to state 38

    $default  reduce using rule 216 (product)


State 58

  122 var_access: ident .

    $default  reduce using rule 122 (var_access)


State 59

  123 var_access: var_access . '.' name_ident
  124           | var_access . '[' expr ']'
  225 default: var_access . '=' expr

    '.'  shift, and go to state 74
    '='  shift, and go to state 75
    '['  shift, and go to state 76


State 60

  219 product: product '{' defaults . '}'
  224 defaults: defaults . ',' default

    ','  shift, and go to state 77
    '}'  shift, and go to state 78


State 61

  223 defaults: default .

    $default  reduce using rule 223 (defaults)


State 62

   14 input_opt: INPUT '<' inputs '>' .

    $default  reduce using rule 14 (input_opt)


State 63

   17 inputs: inputs ',' . input

    STRING  shift, and go to state 23

    input            go to state 79
    input_specifier  go to state 42


State 64

   24 type: TYPE ident '=' . datatype
   25     | TYPE ident '=' . EXTERN

    "alphabet keyword"  shift, and go to state 80
    STRING              shift, and go to state 81
    EXTERN              shift, and go to state 82
    VOID                shift, and go to state 83
    '['                 shift, and go to state 84
    '('                 shift, and go to state 85

    datatype        go to state 86
    type_specifier  go to state 87


State 65

   37 signature: SIGNATURE ident . '(' sig_args ')' @3 '{' sig_decls '}'

    '('  shift, and go to state 88


State 66

   60 algebra: ALGEBRA . ident AUTOMATIC automatic_specifier ';'
   64 algebra_head: ALGEBRA . ident parameters IMPLEMENTS signature_ident '(' eqs ')'
   65             | ALGEBRA . ident parameters EXTENDS algebra_ident

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident  go to state 89


State 67

   62 mode: MODE .

    $default  reduce using rule 62 (mode)


State 68

    5 program: imports_opt input_opt types_opt signature algebras_opt . grammars $@2 instances_opt

    GRAMMAR  shift, and go to state 90

    grammars  go to state 91
    grammar   go to state 92


State 69

   55 algebras_opt: algebras .
   58 algebras: algebras . algebra

    ALGEBRA  shift, and go to state 66
    MODE     shift, and go to state 67

    $default  reduce using rule 55 (algebras_opt)

    algebra       go to state 93
    mode          go to state 71
    algebra_head  go to state 72


State 70

   57 algebras: algebra .

    $default  reduce using rule 57 (algebras)


State 71

   63 algebra_head: mode . ALGEBRA ident parameters IMPLEMENTS signature_ident '(' eqs ')'

    ALGEBRA  shift, and go to state 94


State 72

   59 algebra: algebra_head . '{' fn_defs '}'

    '{'  shift, and go to state 95


State 73

  193 filter_fn: ident '(' . exprs ')'

    MODE    shift, and go to state 43
    STRING  shift, and go to state 96
    NOT     shift, and go to state 97
    NUMBER  shift, and go to state 98
    FLOAT   shift, and go to state 99
    '-'     shift, and go to state 100
    '"'     shift, and go to state 101
    '('     shift, and go to state 102
    '\''    shift, and go to state 103

    ident       go to state 58
    var_access  go to state 104
    expr        go to state 105
    number      go to state 106
    exprs       go to state 107
    const       go to state 108


State 74

  123 var_access: var_access '.' . name_ident

    STRING  shift, and go to state 109

    name_ident  go to state 110


State 75

  225 default: var_access '=' . expr

    MODE    shift, and go to state 43
    STRING  shift, and go to state 96
    NOT     shift, and go to state 97
    NUMBER  shift, and go to state 98
    FLOAT   shift, and go to state 99
    '-'     shift, and go to state 100
    '"'     shift, and go to state 101
    '('     shift, and go to state 102
    '\''    shift, and go to state 103

    ident       go to state 58
    var_access  go to state 104
    expr        go to state 111
    number      go to state 106
    const       go to state 108


State 76

  124 var_access: var_access '[' . expr ']'

    MODE    shift, and go to state 43
    STRING  shift, and go to state 96
    NOT     shift, and go to state 97
    NUMBER  shift, and go to state 98
    FLOAT   shift, and go to state 99
    '-'     shift, and go to state 100
    '"'     shift, and go to state 101
    '('     shift, and go to state 102
    '\''    shift, and go to state 103

    ident       go to state 58
    var_access  go to state 104
    expr        go to state 112
    number      go to state 106
    const       go to state 108


State 77

  224 defaults: defaults ',' . default

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident       go to state 58
    var_access  go to state 59
    default     go to state 113


State 78

  219 product: product '{' defaults '}' .

    $default  reduce using rule 219 (product)


State 79

   17 inputs: inputs ',' input .

    $default  reduce using rule 17 (inputs)


State 80

   27 datatype: "alphabet keyword" .

    $default  reduce using rule 27 (datatype)


State 81

   31 type_specifier: STRING .

    $default  reduce using rule 31 (type_specifier)


State 82

   25 type: TYPE ident '=' EXTERN .

    $default  reduce using rule 25 (type)


State 83

   28 datatype: VOID .

    $default  reduce using rule 28 (datatype)


State 84

   29 datatype: '[' . type_specifier ']'

    STRING  shift, and go to state 81

    type_specifier  go to state 114


State 85

   30 datatype: '(' . named_datatypes ')'

    "alphabet keyword"  shift, and go to state 80
    STRING              shift, and go to state 81
    VOID                shift, and go to state 83
    '['                 shift, and go to state 84
    '('                 shift, and go to state 85

    datatype         go to state 115
    type_specifier   go to state 87
    named_datatypes  go to state 116
    named_datatype   go to state 117


State 86

   24 type: TYPE ident '=' datatype .

    $default  reduce using rule 24 (type)


State 87

   26 datatype: type_specifier .

    $default  reduce using rule 26 (datatype)


State 88

   37 signature: SIGNATURE ident '(' . sig_args ')' @3 '{' sig_decls '}'

    "alphabet keyword"  shift, and go to state 118

    sig_args  go to state 119


State 89

   60 algebra: ALGEBRA ident . AUTOMATIC automatic_specifier ';'
   64 algebra_head: ALGEBRA ident . parameters IMPLEMENTS signature_ident '(' eqs ')'
   65             | ALGEBRA ident . parameters EXTENDS algebra_ident

    AUTOMATIC  shift, and go to state 120
    '('        shift, and go to state 121

    $default  reduce using rule 67 (parameters)

    parameters       go to state 122
    parameter_block  go to state 123


State 90

  153 grammar: GRAMMAR . ident USES signature_ident '(' AXIOM '=' nt_ident ')' '{' grammar_body '}'

    MODE    shift, and go to state 43
    STRING  shift, and go to state 44

    ident  go to state 124


State 91

    5 program: imports_opt input_opt types_opt signature algebras_opt grammars . $@2 instances_opt
  152 grammars: grammars . grammar

    GRAMMAR  shift, and go to state 90

    $default  reduce using rule 4 ($@2)

    $@2      go to state 125
    grammar  go to state 126


State 92

  151 grammars: grammar .
